fix: enable dotenv configuration and update import paths for config

--- a/src/.env
+++ b/src/.env
@@ -1,4 +1,4 @@
 PORT=3000
 MONGODB_URI=mongodb+srv://hiranmay12:2004@hiranmay@cluster1.otjj4.mongodb.net/
 JWT_SECRET=jfgbnjvgeriojgenvfdkjsvmdijviro
-# NODE_ENV=development
+NODE_ENV=development
